fix problem in api

--- a/deployment-with-k8s/experiment.ipynb
+++ b/deployment-with-k8s/experiment.ipynb
@@ -869,18 +869,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
+   "id": "dcd8906c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/workspaces/mlops-things/deployment-with-k8s'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os \n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "19803673",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['model/naive_bayes.pkl']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import joblib\n",
     "\n",
-    "nationality_predictor = open(\"naive_bayes.pkl\",\"wb\")\n",
+    "# Save vectorizer\n",
+    "joblib.dump(vec, \"model/count_vectorizer.pkl\")\n",
     "\n",
-    "joblib.dump(vec, nationality_predictor)\n",
-    "\n",
-    "nationality_predictor.close()"
+    "# Save model\n",
+    "joblib.dump(nb, \"model/naive_bayes.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c4213f77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vect = vec.transform([\"hien\"]).toarray()\n",
+    "result = nb.predict(vect)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "2acacfae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.str_('african-american')"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result[0]"
    ]
   }
  ],
