add how to use lock in multiprocessing

--- a/mlops-1/python/high-performance-python.ipynb
+++ b/mlops-1/python/high-performance-python.ipynb
@@ -214,6 +214,108 @@
     "\n",
     "print(outputs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7f9cb3bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multiprocessing import Lock\n",
+    "\n",
+    "lock = Lock()\n",
+    "\n",
+    "def process_dataframe(chunk_id, chunk_data: pd.DataFrame):\n",
+    "    lock.acquire()\n",
+    "    print(f\"Processing chunk {chunk_id}...\")\n",
+    "    sleep(5)\n",
+    "    print(f\"Chunk {chunk_id} has been processed successfully.\")\n",
+    "    lock.release()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2e6ee10d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processID: 13915\n",
+      "Processing chunk 0...processID: 13919\n",
+      "\n",
+      "processID: 13922\n",
+      "processID: 13923\n",
+      "processID: 13924\n",
+      "Chunk 0 has been processed successfully.\n",
+      "Processing chunk 1...\n",
+      "Chunk 1 has been processed successfully.\n",
+      "Processing chunk 2...\n",
+      "Chunk 2 has been processed successfully.\n",
+      "Processing chunk 3...\n",
+      "Chunk 3 has been processed successfully.\n",
+      "Processing chunk 4...\n",
+      "Chunk 4 has been processed successfully.\n",
+      "total time taken: 25.07 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [\n",
+    "    ['tom', 10],\n",
+    "    ['nick', 15],\n",
+    "    ['john', 20],\n",
+    "    ['jane', 25],\n",
+    "    ['jill', 30],\n",
+    "    ['jack', 35],\n",
+    "    ['joseph', 40],\n",
+    "    ['james', 45],\n",
+    "    ['jerry', 50],\n",
+    "    ['jasmine', 55]\n",
+    "]\n",
+    "\n",
+    "df = pd.DataFrame(data, columns=['name', 'age'])\n",
+    "\n",
+    "chunk_size = 2\n",
+    "chunks = [\n",
+    "    df[i:i+chunk_size].to_numpy() \n",
+    "    for i in range(0, len(df), chunk_size)\n",
+    "]\n",
+    "\n",
+    "start = time()\n",
+    "\n",
+    "procs = []\n",
+    "\n",
+    "for i, chunk in enumerate(chunks):\n",
+    "    # define our process but not start it yet\n",
+    "    proc = Process(target=process_dataframe, args=(i, chunk))\n",
+    "\n",
+    "    # start the process\n",
+    "    proc.start()\n",
+    "\n",
+    "    # print the process ID\n",
+    "    print(f\"processID: {proc.pid}\")\n",
+    "\n",
+    "    # append the process to the list\n",
+    "    procs.append(proc)\n",
+    "\n",
+    "# wait for all processes to finish\n",
+    "for proc in procs:\n",
+    "    proc.join()\n",
+    "\n",
+    "print(f\"total time taken: {time() - start:.2f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5916650",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
